style: fix WalletFlow wallet list overflow issue and warning text css variable issue

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   --text-secondary: #94a3b8;
   --kas-primary: #70c7ba;
   --kas-secondary: #49eacb;
-  --warning-text: #fbb81a;
+  --text-warning: #fbb81a;
   /* amber-300 */
 }
 
